# TradingView

./: .gitignore  Cargo.toml  build.bat  build.rs  build.sh  config.toml
.claude/: settings.local.json
assets/: readme.txt
src/: app.rs  config.rs  main.rs
src/api/: client.rs  websocket.rs
src/models/: account.rs  mod.rs  order.rs  ticker.rs
src/strategy/: dca.rs
src/ui/: tui.rs
